Bug 81972 - Writing more than 63335 consecutive characters with no blank spaces hangs LibO
Summary: Writing more than 63335 consecutive characters with no blank spaces hangs LibO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: Other All
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-31 16:23 UTC by Emir Sarı
Modified: 2014-08-12 09:47 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
screencast (2.58 MB, video/swf)
2014-07-31 16:23 UTC, Emir Sarı
Details
original test file (6.71 KB, application/vnd.oasis.opendocument.text)
2014-07-31 16:26 UTC, Emir Sarı
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Emir Sarı 2014-07-31 16:23:02 UTC
Created attachment 103756 [details]
screencast

Hello,

So, I decided to "test" the support for monster paragraphs thing.

I downloaded the original test file on Apache Bugzilla[1], and decided to type few characters more.

Expected behaviour: 
-Being able to continue typing

Actual behaviour: 
-LibreOffice hangs. 

Reproducible with latest master, OS X 7.5. I didn't install 4.3, so I cannot try with 4.2.6. 

[1]https://issues.apache.org/ooo/show_bug.cgi?id=17171

-Video screencast attached.
Comment 1 Emir Sarı 2014-07-31 16:26:12 UTC
Created attachment 103757 [details]
original test file
Comment 2 tommy27 2014-07-31 18:51:46 UTC
reproducible under Win7x64 using LibO 4.3.0.4

I add this to mab4.3 since it's sounds embarassing that such a new feature which has been very advertised in release mails does not work
Comment 3 Emir Sarı 2014-07-31 18:56:27 UTC
<cartman>Seriously you guys.</cartman>
Comment 4 tommy27 2014-07-31 19:00:12 UTC
mmmhhh... wait a minute... maybe I've found what's wrong...

that text file, it's a basically a single word composed by 63335 numeric characters.

I have a theory.... It hangs when you add a letter or another number and then press enter because that 63335 words is somehow processed or checked against autocorrect replacement tables... maybe there's a 16bit limit to single words that are processed by spellchecker....

if you enter a space before the last 63334th character then you can type whatever you want and no hangs happens

what you think about it?
Comment 5 tommy27 2014-07-31 19:07:17 UTC
yes, I think I did a god catch.

same issue with attachment 69966 [details] which is again a single word of 63335 characters
the lack of white spaces is the crucial point that triggers the hanging bug.

I remove this from MAB4.3 since the feature works fine, this is just a very weird corner case of a paragraph made of a single word with 63335 characters.
Comment 6 tommy27 2014-07-31 19:08:07 UTC
small "summary notes" edit
Comment 7 Commit Notification 2014-08-12 09:45:46 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=73bb0fe7953f501747fb6b7c315beda4f253a216

Resolves: fdo#81972 determining capitalization of >=63335 char word hangs



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.