Resolves: fdo#81972 determining capitalization of >=63335 char word hangs

Change-Id: I929eb86021883852381df1edf8bf1fb2150e348d